Update: Added a role based authentication + module based progress in backend.